fixed the button margin on small screens

--- a/src/Components/Booking.css
+++ b/src/Components/Booking.css
@@ -475,7 +475,7 @@
         margin-bottom: 10px;
     }
 
-    .book-now-btn {
-        margin-bottom: 20px;
+    .book-now-section {
+        height: 50vh;
     }
 }
